[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/LevelMarker.png" type="Texture" id=1]
[ext_resource path="res://Scripts/TileUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/Themes/TileUI_theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Themes/LevelMarker_theme.tres" type="Theme" id=4]

[node name="TileUI" type="Control"]
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBox"]
margin_right = 132.0
margin_bottom = 100.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="VBox/CenterContainer"]
margin_left = 16.0
margin_right = 116.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="VBox/CenterContainer"]
margin_left = 52.0
margin_top = 21.0
margin_right = 80.0
margin_bottom = 78.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PDContainer" type="PanelContainer" parent="VBox"]
margin_top = 104.0
margin_right = 132.0
margin_bottom = 143.0
mouse_filter = 2
theme = ExtResource( 3 )

[node name="ProductionPDLabel" type="Label" parent="VBox/PDContainer"]
margin_left = 26.0
margin_top = 7.0
margin_right = 105.0
margin_bottom = 32.0
size_flags_horizontal = 4
text = "Bla /day"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorkersContainer" type="PanelContainer" parent="VBox"]
margin_top = 147.0
margin_right = 132.0
margin_bottom = 186.0
mouse_filter = 2

[node name="WorkersLabel" type="Label" parent="VBox/WorkersContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 125.0
margin_bottom = 32.0
size_flags_horizontal = 4
theme = ExtResource( 3 )
text = "X/Y workers"
__meta__ = {
"_edit_use_anchors_": false
}
